# Competitive-Programming-with-Sarvan_Yaduvanshi

./: .autocp  .gitignore  CMakeLists.txt  LICENSE  My Competitive Programming Template.cpp  Practice.cpp  README.md  main  practice.cpp
00_Core_Algorithms_Revision/01_Graph_Core_Algorithms/: 01_Depth_First_Search_DFS.cpp  02_Breadth_First_Search_BFS.cpp
01_CPP_STL_Foundations_To_Advanced/: README_STL_ROADMAP.md
01_CPP_STL_Foundations_To_Advanced/01_STL_Introduction_And_Basics/: 01_What_Is_STL.cpp  02_Containers_Vs_Algorithms.cpp  03_Iterators_Concept.cpp  04_Time_Complexity_Basics.cpp  05_Header_Files.cpp  06_Namespaces.cpp  07_Auto_Keyword.cpp  08_Range_Based_Loops.cpp  09_Lambda_Basics.cpp  README.md
01_CPP_STL_Foundations_To_Advanced/02_Sequence_Containers/: 01_Vector_Complete.cpp  02_Deque_Complete.cpp  03_List_Complete.cpp  04_Forward_List.cpp  05_Array_Fixed_Size.cpp  README.md
01_CPP_STL_Foundations_To_Advanced/03_Ordered_Associative_Containers/: 01_Set_Complete.cpp  02_Multiset_Complete.cpp  03_Map_Complete.cpp  04_Multimap_Complete.cpp  05_Ordered_Container_Tricks.cpp  README.md
01_CPP_STL_Foundations_To_Advanced/04_Unordered_Containers/: 01_Unordered_Set_Complete.cpp  02_Unordered_Map_Complete.cpp  03_Hashing_Fundamentals.cpp  04_Custom_Hash.cpp  05_Collision_And_Performance.cpp  (+1 more)
04_String_Algorithms_And_Patterns/: README_STRING_ROADMAP.md
05_Sorting_And_Searching_Techniques/: README_SORTING_AND_SEARCHING.md
06_Recursion & Backtracking/: MASTER_RECURSION_TEMPLATES.cpp  README_RECURSION_ROADMAP.md
07_Linked_List_Algorithms_And_Patterns/: README_LINKED_LIST_ROADMAP.md
08_Stack_Queue_And_Heap_Algorithms/: README_STACK_QUEUE_HEAP_ROADMAP.md
09_Greedy Algorithms/: 00_Greedy_Master_Problem_CheatSheet.cpp  README.md
10_Advanced Bit Manipulation + DP with Bit-Masking/: README_BIT_MANIPULATION_ROADMAP.md
11_Tree_Algorithms_And_Patterns/: README.md  README_TREE_ROADMAP.md
12_Graph_Algorithms_And_Patterns/: 00_QUICK_REFERENCE_CHEAT_SHEET.cpp  GRAPH_PROBLEMS_PRACTICE_LIST.md  README.md
13_Dynamic_Programming_Algorithms_And_Patterns/: README_DP_ROADMAP.md
14_Number_Theory_And_Mathematics/: Problem_Cheat_Sheet.md  README_NUMBER_THEORY_ROADMAP.md
15_Segment_Tree_And_Range_Query_Data_Structures/: Problem_Cheat_Sheet.md  README.md
16_Mathematical_Problem_Solving_And_Game_Theory/: README_GAME_THEORY_ROADMAP.md
Array & Subarray Techniques/: Basic Implementation on Arrays.cpp
(+1151 files in other folders)
