cmake_minimum_required(VERSION 4.0)
project(Zero_to_Hero_CP___DSA)

set(CMAKE_CXX_STANDARD 23)

add_executable(Zero_to_Hero_CP___DSA main.cpp
        "Sorting and Searching Tecchnique/Searching Technique/Linear_Search.cpp"
        "Sorting and Searching Tecchnique/Searching Technique/Linear_Search.h"
        "Sorting and Searching Tecchnique/Searching Technique/codeforces_problem/P_1915C_Can_i_square.cpp"
        "Sorting and Searching Tecchnique/Searching Technique/codeforces_problem/P_1915C_Can_i_square.h")
