cmake_minimum_required(VERSION 4.0)
project(Zero_to_Hero_CP___DSA)

set(CMAKE_CXX_STANDARD 23)

add_executable(Zero_to_Hero_CP___DSA main.cpp
        "Sorting and Searching Tecchnique/Searching Technique/Linear_Search.cpp"
        "Sorting and Searching Tecchnique/Searching Technique/Linear_Search.h"
        "Sorting and Searching Tecchnique/Searching Technique/codeforces_problem/P_1915C_Can_i_square.cpp"
        "Sorting and Searching Tecchnique/Searching Technique/codeforces_problem/P_1915C_Can_i_square.h"
        main.cpp
        "Mathematics/Number Theory/Factorization.cpp"
        "Mathematics/Number Theory/PrimeFactorization.cpp"
        "Mathematics/Number Theory/Sieve_of_Eratosthenes.cpp"
        "Mathematics/Number Theory/primeFactorization_Using_SPF.cpp"
        "Mathematics/Number Theory/LGM_Level_Optimized_SPF_Code.cpp"
        "Mathematics/Number Theory/The_Linear_Sieve.cpp"
        "Mathematics/Binary Exponentiation/Binary_Exponentiation.cpp"
        "Mathematics/Number Theory/Greatest Common Divisor(GCD)/Euclidean_algorithm.cpp")
